--- a/spa/src/app/addticket/addticket.component.html
+++ b/spa/src/app/addticket/addticket.component.html
@@ -19,7 +19,7 @@
     <mat-grid-tile>
       <mat-form-field appearance="fill">
         <mat-label>Jira ID</mat-label>
-        <input matInput #input maxlength="20"  formControlName="jiraID" placeholder="Ex. Support-1234" />
+        <input matInput #input maxlength="20"  formControlName="jiraID" placeholder="Ex. DBT-1" />
       </mat-form-field>
     </mat-grid-tile>
 
@@ -38,7 +38,8 @@
     <mat-grid-tile>
       <mat-form-field appearance="fill">
         <mat-label>Reported Date</mat-label>
-        <input matInput [matDatepicker]="picker"  formControlName="repDate" />
+        <input matInput [matDatepicker]="picker"  (dateChange)="changeEvent($event)"/>
+        <input type="hidden" value=""  formControlName="repDate" />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
